# term_deck

./: Cargo.toml  README.md
examples/: demo.md
queries/: java.scm  python.scm  rust.scm
src/: colors.rs  main.rs  rendering.rs
