[package]
name = "term_deck"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.0"
termion = "4.0.3"
tokio = { version = "1.40.0", features = ["full"] }
viuer = "0.8.1"
tree-sitter = "0.24.4"
tree-sitter-highlight = "0.24.4"
tree-sitter-java = "0.23.4"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.4"
